added step to sequence generation

--- a/CanterburyTales_WordLevel_LSTM.ipynb
+++ b/CanterburyTales_WordLevel_LSTM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -190,15 +190,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Sequences: 264697\n"
+      "Total Sequences: 88233\n"
      ]
     }
    ],
    "source": [
     "# organize into sequences of tokens\n",
+    "#difference between sequences (previous) and sentences is that I fixed issue\n",
+    "#with repeating words\n",
     "length = 50 + 1\n",
+    "#move forward 3 words\n",
+    "step = 3\n",
     "sequences = list()\n",
-    "for i in range(length, len(tokens)):\n",
+    "for i in range(length, len(tokens), step):\n",
     "    # select sequence of tokens\n",
     "    seq = tokens[i-length:i]\n",
     "    # convert into a line\n",
@@ -210,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -220,12 +224,13 @@
    "source": [
     "# save sequences to file\n",
     "out_filename = 'canterburytales_sequences.txt'\n",
+    "\n",
     "save_doc(sequences, out_filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -250,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -278,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -297,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -311,15 +316,15 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "embedding_8 (Embedding)      (None, 50, 50)            885650    \n",
+      "embedding_1 (Embedding)      (None, 50, 50)            885650    \n",
       "_________________________________________________________________\n",
-      "lstm_12 (LSTM)               (None, 50, 100)           60400     \n",
+      "lstm_1 (LSTM)                (None, 50, 100)           60400     \n",
       "_________________________________________________________________\n",
-      "lstm_13 (LSTM)               (None, 100)               80400     \n",
+      "lstm_2 (LSTM)                (None, 100)               80400     \n",
       "_________________________________________________________________\n",
-      "dense_13 (Dense)             (None, 100)               10100     \n",
+      "dense_1 (Dense)              (None, 100)               10100     \n",
       "_________________________________________________________________\n",
-      "dense_14 (Dense)             (None, 17713)             1789013   \n",
+      "dense_2 (Dense)              (None, 17713)             1789013   \n",
       "=================================================================\n",
       "Total params: 2,825,563\n",
       "Trainable params: 2,825,563\n",
@@ -352,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false,
     "deletable": true,
