--- a/CanterburyTales_WordLevel_LSTM-Bag_of_Words.ipynb
+++ b/CanterburyTales_WordLevel_LSTM-Bag_of_Words.ipynb
@@ -2,89 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "from numpy import array\n",
-    "from pickle import dump\n",
     "from __future__ import print_function\n",
-    "from keras.callbacks import LambdaCallback, EarlyStopping, ModelCheckpoint\n",
-    "from keras.preprocessing.text import Tokenizer\n",
-    "from keras.optimizers import RMSprop\n",
-    "from keras.utils import to_categorical\n",
+    "\n",
     "from keras.models import Sequential\n",
-    "from keras.layers import Dense\n",
-    "from keras.layers import LSTM\n",
-    "from keras.layers import Embedding\n",
-    "import tensorflow as tf\n",
-    "import string"
+    "from keras.layers.core import Dense, Activation, Dropout\n",
+    "from keras.layers.recurrent import LSTM\n",
+    "from keras.utils.data_utils import get_file\n",
+    "\n",
+    "import numpy as np\n",
+    "import random\n",
+    "import sys\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "# load text to memory\n",
-    "def load_doc(filename): \n",
-    "# open the file as read only\n",
-    "    file = open(filename, 'r')\n",
-    "# read all text\n",
-    "    text = file.read()\n",
-    "# close the file\n",
-    "    file.close()\n",
-    "    return text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "##heuristics for splitting up words\n",
-    "#replace dashes with a white space\n",
-    "#otherwise words based on white space.\n",
-    "#reduce all words to lowercase and remove punctuation from words \n",
-    "#remove all words that are not alphabetic \n",
-    "# turn a doc into clean tokens\n",
-    "\n",
-    "\n",
-    "\n",
-    "def clean_doc(doc):\n",
-    "# replace '--' with a space ' '\n",
-    "    doc = doc.replace('--', ' ')\n",
-    "# split into tokens by white space\n",
-    "    tokens = doc.split()\n",
-    "# remove punctuation from each token\n",
-    "    table = str.maketrans('', '', string.punctuation)\n",
-    "    tokens = [w.translate(table) for w in tokens]\n",
-    "# remove remaining tokens that are not alphabetic\n",
-    "    tokens = [word for word in tokens if word.isalpha()]\n",
-    "# make lower case\n",
-    "    tokens = [word.lower() for word in tokens]\n",
-    "    return tokens\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -100,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -108,12 +47,121 @@
    },
    "outputs": [],
    "source": [
-    "# save tokens to file, one dialog per line\n",
-    "def save_doc(lines, filename):\n",
-    "    data = '\\n'.join(lines)\n",
-    "    file = open(filename, 'w')\n",
-    "    file.write(data)\n",
-    "    file.close()\n"
+    "path = \"/Users/neilwatt/Documents/BIs/PrWeb/2018Posts/October/canterburytales.txt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "corpus length: 1584515\n"
+     ]
+    }
+   ],
+   "source": [
+    "try: \n",
+    "    text = open(path).read().lower()\n",
+    "except UnicodeDecodeError:\n",
+    "    import codecs\n",
+    "    text = codecs.open(path, encoding='utf-8').read().lower()\n",
+    "\n",
+    "print('corpus length:', len(text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chars: <class 'set'>\n",
+      "words <class 'set'>\n",
+      "total number of unique words 37044\n",
+      "total number of unique chars 58\n"
+     ]
+    }
+   ],
+   "source": [
+    "chars = set(text)\n",
+    "words = set(open('/Users/neilwatt/Documents/BIs/PrWeb/2018Posts/October/canterburytales.txt').read().lower().split())\n",
+    "\n",
+    "print(\"chars:\",type(chars))\n",
+    "print(\"words\",type(words))\n",
+    "print(\"total number of unique words\",len(words))\n",
+    "print(\"total number of unique chars\", len(chars))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "word_indices <class 'dict'> length: 37044\n",
+      "indices_words <class 'dict'> length 37044\n"
+     ]
+    }
+   ],
+   "source": [
+    "word_indices = dict((c, i) for i, c in enumerate(words))\n",
+    "indices_word = dict((i, c) for i, c in enumerate(words))\n",
+    "\n",
+    "print(\"word_indices\", type(word_indices), \"length:\",len(word_indices) )\n",
+    "print(\"indices_words\", type(indices_word), \"length\", len(indices_word))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "maxlen: 30 step: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "maxlen = 30\n",
+    "step = 3\n",
+    "print(\"maxlen:\",maxlen,\"step:\", step)\n",
+    "sentences = []\n",
+    "next_words = []\n",
+    "next_words= []\n",
+    "sentences1 = []\n",
+    "list_words = []\n",
+    "\n",
+    "sentences2=[]\n",
+    "list_words=text.lower().split()"
    ]
   },
   {
@@ -129,30 +177,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Project Gutenberg Etext of The Canterbury Tales and Other Poems\n",
-      "by Geoffrey Chaucer\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "                      THE CANTERBURY TALES\n",
-      "                         And other Poems\n",
-      "                      \n"
+      "nb sequences(length of sentences): 89305\n",
+      "length of next_word 89305\n"
      ]
     }
    ],
    "source": [
-    "# load document\n",
-    "in_filename = '/Users/neilwatt/Documents/BIs/PrWeb/2018Posts/October/canterburytales.txt'\n",
-    "doc = load_doc(in_filename)\n",
-    "print(doc[:200])"
+    "for i in range(0,len(list_words)-maxlen, step):\n",
+    "    sentences2 = ' '.join(list_words[i: i + maxlen])\n",
+    "    sentences.append(sentences2)\n",
+    "    next_words.append((list_words[i + maxlen]))\n",
+    "print('nb sequences(length of sentences):', len(sentences))\n",
+    "print(\"length of next_word\",len(next_words))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -163,122 +204,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['the', 'project', 'gutenberg', 'etext', 'of', 'the', 'canterbury', 'tales', 'and', 'other', 'poems', 'by', 'geoffrey', 'chaucer', 'the', 'canterbury', 'tales', 'and', 'other', 'poems', 'of', 'geoffrey', 'chaucer', 'edited', 'for', 'popular', 'perusal', 'by', 'd', 'laing', 'purves', 'contents', 'preface', 'life', 'of', 'chaucer', 'the', 'canterbury', 'tales', 'the', 'general', 'prologue', 'the', 'knights', 'tale', 'the', 'millers', 'tale', 'the', 'reeves', 'tale', 'the', 'cooks', 'tale', 'the', 'man', 'of', 'laws', 'tale', 'the', 'wife', 'of', 'baths', 'tale', 'the', 'friars', 'tale', 'the', 'sompnours', 'tale', 'the', 'clerks', 'tale', 'the', 'merchants', 'tale', 'the', 'squires', 'tale', 'the', 'franklins', 'tale', 'the', 'doctors', 'tale', 'the', 'pardoners', 'tale', 'the', 'shipmans', 'tale', 'the', 'prioresss', 'tale', 'chaucers', 'tale', 'of', 'sir', 'thopas', 'chaucers', 'tale', 'of', 'meliboeus', 'the', 'monks', 'tale', 'the', 'nuns', 'priests', 'tale', 'the', 'second', 'nuns', 'tale', 'the', 'canons', 'yeomans', 'tale', 'the', 'manciples', 'tale', 'the', 'parsons', 'tale', 'preces', 'de', 'chauceres', 'the', 'court', 'of', 'love', 'the', 'cuckoo', 'and', 'the', 'nightingale', 'the', 'assembly', 'of', 'fowls', 'the', 'flower', 'and', 'the', 'leaf', 'the', 'house', 'of', 'fame', 'troilus', 'and', 'cressida', 'chaucers', 'dream', 'the', 'prologue', 'to', 'the', 'legend', 'of', 'good', 'women', 'chaucers', 'abc', 'miscellaneous', 'poems', 'the', 'canterbury', 'tales', 'the', 'prologue', 'when', 'that', 'aprilis', 'with', 'his', 'showers', 'swoot', 'sweet', 'the', 'drought', 'of', 'march', 'hath', 'pierced', 'to', 'the', 'root', 'and', 'bathed', 'every', 'vein', 'in', 'such', 'licour', 'of', 'which', 'virtue', 'engenderd', 'is']\n",
-      "Total Tokens: 264748\n",
-      "Unique Tokens: 17712\n"
+      "Vectorization...\n"
      ]
     }
    ],
    "source": [
-    "# clean document\n",
-    "tokens = clean_doc(doc)\n",
-    "print(tokens[:200])\n",
-    "print('Total Tokens: %d' % len(tokens))\n",
-    "print('Unique Tokens: %d' % len(set(tokens)))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total Sequences: 88233\n"
-     ]
-    }
-   ],
-   "source": [
-    "# organize into sequences of tokens\n",
-    "#difference between sequences (previous) and sentences is that I fixed issue\n",
-    "#with repeating words\n",
-    "length = 50 + 1\n",
-    "#move forward 3 words\n",
-    "step = 3\n",
-    "sequences = list()\n",
-    "for i in range(length, len(tokens), step):\n",
-    "    # select sequence of tokens\n",
-    "    seq = tokens[i-length:i]\n",
-    "    # convert into a line\n",
-    "    line = ' '.join(seq)\n",
-    "    # store\n",
-    "    sequences.append(line)\n",
-    "print('Total Sequences: %d' % len(sequences))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "# save sequences to file\n",
-    "out_filename = 'canterburytales_sequences.txt'\n",
-    "\n",
-    "save_doc(sequences, out_filename)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "def load_doc(filename):\n",
-    "    # open the file as read only\n",
-    "    file = open(filename, 'r')\n",
-    "    # read all text\n",
-    "    text = file.read()\n",
-    "    # close the file\n",
-    "    file.close()\n",
-    "    return text\n",
-    " \n",
-    "# load\n",
-    "in_filename = 'canterburytales_sequences.txt'\n",
-    "doc = load_doc(in_filename)\n",
-    "lines = doc.split('\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "#representation of the model is distributed\n",
-    "#- i.e words with similar meaning have similar representation\n",
-    "#representation learned simulataneously with model\n",
-    "#probability of next word using context of last 100 words\n",
-    "#embedding layer for representation, LSTM to predict words on context\n",
-    "\n",
-    "# integer encode sequences of words\n",
-    "#mapping each word to unique integer and encoding input sequences\n",
-    "tokenizer = Tokenizer()\n",
-    "tokenizer.fit_on_texts(lines)\n",
-    "sequences = tokenizer.texts_to_sequences(lines)\n",
-    "\n",
-    "# vocabulary size\n",
-    "#i add a one since vocabulary begins from index one \n",
-    "#but indexing arrays is zero offset\n",
-    "vocab_size = len(tokenizer.word_index) + 1"
+    "print('Vectorization...')\n",
+    "X = np.zeros((len(sentences), maxlen, len(words)), dtype=np.bool)\n",
+    "y = np.zeros((len(sentences), len(words)), dtype=np.bool)\n",
+    "for i, sentence in enumerate(sentences):\n",
+    "    for t, word in enumerate(sentence.split()):\n",
+    "        #print(i,t,word)\n",
+    "        X[i, t, word_indices[word]] = 1\n",
+    "    y[i, word_indices[next_words[i]]] = 1\n"
    ]
   },
   {
