--- a/CanterburyTales_WordLevel_LSTM-Bag_of_Words.ipynb
+++ b/CanterburyTales_WordLevel_LSTM-Bag_of_Words.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -19,7 +21,6 @@
    ],
    "source": [
     "from __future__ import print_function\n",
-    "\n",
     "from keras.models import Sequential\n",
     "from keras.layers.core import Dense, Activation, Dropout\n",
     "from keras.layers.recurrent import LSTM\n",
@@ -235,7 +236,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
